# livechat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.py
.github/workflows/: ci.yml
alembic/: env.py
app/: app.py
app/adapters/analytics/: analytics.py  clickhouse_client.py
app/adapters/cache/: memcache.py
app/adapters/connection/: redis_connection.py
app/adapters/db/: cassandra_engine.py  db.py  mongo_client.py  mongo_trans_manager.py
app/adapters/db/models/: __init__.py  base.py  cassandra_message.py  mongo_chat.py  mongo_notification.py  mongo_room.py  mongo_user.py  redis_session.py  redis_websocker_session.py  user.py
app/adapters/db/models/cassandra/: message.py
app/adapters/db/models/mongo/: join_request.py  notification.py  outbox.py  room.py  room_membership.py  user.py
app/adapters/db/models/redis/: user_session.py  websocker_session.py
app/adapters/db/mongo/: indexes.py
app/adapters/db/repos/: chat_room.py  message_repo.py  notification.py  room.py  room_membership.py  session.py  user.py  user_session.py  websocket_session.py
app/adapters/db/repos/cassandra/: message.py  message_repo.py
app/adapters/db/repos/mongo/: join_request.py  notification.py  outbox.py  room.py  room_membership.py  user.py
app/adapters/db/repos/redis/: user_session.py  websocket_session.py
app/adapters/jobs/: celery_app.py  outbox_repair.py  tasks.py
app/adapters/notification_sender/: websocket_sender.py
app/adapters/security/: password_hasher.py
app/api/: dependencies.py  di.py  exception_handler.py  main_router.py  middlewares.py  utils.py
app/api/routes/: analytics.py  message.py  notification.py  room.py  status.py  user.py  websocket.py
app/api/schemas/: message.py  notification.py  room.py  user.py  websocket.py
app/core/: constants.py  logger.py  settings.py  utils.py
app/domain/dtos/: chat_room.py  join_request.py  message.py  notification.py  room.py  user.py
app/domain/entities/: analytics_event.py  chat_room.py  event_payload.py  join_request.py  message.py  notification.py  outbox.py  outbox_event.py  room.py  room_membership.py  room_stats.py  user.py  user_session.py  websocket_session.py
app/domain/exceptions/: analytics.py  auth.py  chat_room.py  join_request.py  message.py  notification.py  room.py  session.py  user.py  user_session.py  websocket_session.py
app/domain/ports/: analytics.py  analytics_repository.py  cache.py  cache_repository.py  chat_room_repository.py  connection.py  message_repository.py  notification_repository.py  notification_sender.py  password_hasher.py  session_repository.py  transaction_manager.py  user_repository.py
app/domain/repos/: chat_room.py  join_request.py  message.py  notification.py  outbox.py  outbox_event.py  room.py  room_membership.py  room_stats.py  session.py  user.py  user_session.py  websocket_session.py
app/domain/services/: analytics.py  chat_room.py  message.py  notification.py  room.py  user.py  user_service.py  utils.py  websocket.py
cassandra_migrations/: 001_create_keyspace.cql  002_create_message_tables.cql  002_create_messages_table.cql  003_create_user_id_index.cql  004_create_messages_by_user_table.cql  005_create_messages_by_id_table.cql  run_migrations.py
tests/: test_api.py
tests/test_api/: conftest.py  test_api.py  test_user.py
tests/test_services/: conftest.py  test_message.py  test_notification.py  test_room.py  test_user.py  test_websocket.py
