[project]
name = "livechat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "orjson>=3.11.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "python-dateutil>=2.9.0.post0",
    "redis>=6.4.0",
    "structlog>=25.4.0",
    "toml>=0.10.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
    "types-passlib>=1.7.7.20250602",
    "types-python-dateutil>=2.9.0.20251008",
    "types-toml>=0.10.8.20240310",
]

[tool.mypy]
exclude = 'tests/'

[tool.coverage.run]
source = ["src"]
omit = ["**/__pycache__/*"]
