[project]
name = "livechat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=5.0.0",
    "cassandra-driver>=3.29.2",
    "celery[asyncio]>=5.5.3",
    "clickhouse-connect>=0.9.2",
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "orjson>=3.11.3",
    "pydantic-settings>=2.11.0",
    "pymemcache>=4.0.0",
    "pymongo>=4.15.3",
    "python-dateutil>=2.9.0.post0",
    "redis>=6.4.0",
    "structlog>=25.4.0",
    "toml>=0.10.2",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "celery-types[asyncio]>=0.23.0",
    "mypy[faster-cache]>=1.18.2",
    "pre-commit>=4.3.0",
    "pyrefly>=0.37.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
    "testcontainers>=4.13.2",
    "ty>=0.0.1a22",
    "types-passlib>=1.7.7.20250602",
    "types-python-dateutil>=2.9.0.20251008",
    "types-toml>=0.10.8.20240310",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disallow_subclassing_any = true
disallow_untyped_calls = true
warn_return_any = true

cache_dir = ".mypy_cache"
show_error_codes = true
pretty = true
show_column_numbers = true
show_error_context = true

exclude = [
    'tests/',
    '.venv/',
    'venv/',
]

ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "cassandra.*",
    "pymemcache.*",
    "cassandra_migrations.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
cache-dir = ".ruff_cache"

exclude = [
    '.venv/', 'venv/', '**/.mypy_cache/'
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "RET",
    "PL",
    "S",
    "T10",
    "ARG",
    "PT",
]

ignore = [
    "E501",      # line too long
    "PLR0913",   # too many arguments
    "B008",      # function call argument default
    "C901",      # too complex
    "PLR0915",   # too many statements
    "PLR0917",   # too many locals
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**" = [
    "S101",     # assert statements
    "S106",     # hardcoded passwords
    "PLR2004",  # magic values
]
"**/migrations/**" = ["ALL"]
"**/repos/cassandra/**" = ["ARG002"]  # unused method argument
"**/repos/redis/**" = ["ARG002"]  # unused method argument


[tool.coverage.run]
source = ["src"]
omit = ["**/__pycache__/*"]
